--- a/Smart Nutrition.htm
+++ b/Smart Nutrition.htm
@@ -286,7 +286,7 @@ input[type='text'], input:not([type]), textarea {
 
 
 
-<div class="ss-form-container"><div class="ss-header-image-container"><div class="ss-header-image-image"><div class="ss-header-image-sizer">
+<div class="ss-form-container" style="width: 531px; height: 1144px"><div class="ss-header-image-container"><div class="ss-header-image-image"><div class="ss-header-image-sizer">
 	<p align="center">
 	<img border="0" src="https://ia601500.us.archive.org/14/items/mh_om2003_hotmail_201612/%D9%88%D8%B2%D8%A7%D8%B1%D8%A9_%D8%A7%D9%84%D8%AA%D8%B9%D9%84%D9%8A%D9%85_%D8%A7%D9%84%D8%B3%D8%B9%D9%88%D8%AF%D9%8A%D8%A9.png" width="172" height="157" align="right"><img border="0" src="https://archive.org/download/91199/91199.gif" width="164" height="147" align="left"></div></div></div>
 <div class="ss-form"><form action="https://docs.google.com/forms/d/e/1FAIpQLSe0p-xuxn6QtlpgdNrlww0SDl2KmYRKWIuhDbGuu0DSYpsahg/formResponse" method="POST" id="ss-form" target="_self" onsubmit=""><ol role="list" class="ss-question-list" style="padding-left: 0;">
