--- a/Smart Nutrition.htm
+++ b/Smart Nutrition.htm
@@ -6,7 +6,7 @@
 <meta name="fragment" content="!">
 <meta name="viewport" content="width=device-width">
 <!-- base href="https://docs.google.com/forms/d/e/1FAIpQLSe0p-xuxn6QtlpgdNrlww0SDl2KmYRKWIuhDbGuu0DSYpsahg/viewform" -->
-<title>نموذج بدون عنوان</title>
+<title>التغذية الذكية</title>
 <link rel="stylesheet" type="text/css" href="8899_files/css.css">
 
 <link href="8899_files/2566203666-formview_st_ltr.css" type="text/css" rel="stylesheet">
